plugins {
    id 'java-library'
    id 'io.spring.dependency-management'
    id 'crypto-quality'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:${libs.versions.spring.boot.get()}"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${libs.versions.spring.cloud.get()}"
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    compileOnly libs.lombok
    annotationProcessor libs.lombok
    testImplementation libs.spring.boot.starter.test
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '-parameters'
}
